--- a/src/app/admin/login-page/login-page.component.html
+++ b/src/app/admin/login-page/login-page.component.html
@@ -1,1 +1,43 @@
-<p>login-page works!</p>
+<form class="card" [formGroup]="form" (ngSubmit)="submit()">
+  <h2>Войти в панель администратора</h2>
+
+  <div
+    [ngClass]="{invalid:form.get('email').touched && form.get('email').invalid}"
+    class="form-control">
+    <label for="email">Email:</label>
+    <input id="email" type="email" formControlName="email">
+    <div
+      *ngIf="form.get('email').touched && form.get('email').invalid"
+      class="validation">
+      <small *ngIf="form.get('email').errors.required">
+        Ввудите поле email
+      </small>
+      <small *ngIf="form.get('email').errors.email">
+        Ввудите корректный email
+      </small>
+    </div>
+  </div>
+
+  <div
+    [ngClass]="{invalid:form.get('password').touched && form.get('password').invalid}"
+    class="form-control">
+    <label for="password">Пароль:</label>
+    <input id="password" type="password" formControlName="password">
+    <div
+      *ngIf="form.get('password').touched && form.get('password').invalid"
+      class="validation">
+      <small *ngIf="form.get('password').errors.required">
+        Введите пароль
+      </small>
+      <small *ngIf="form.get('password').errors.minlength">
+        Пароль должен быть не менее {{form.get('password').errors.minlength.requiredLength}} символов.
+      </small>
+    </div>
+  </div>
+
+  <button
+    type="submit"
+    class="btn btn-primary"
+    [disabled]="form.invalid"
+  >Войти</button>
+</form>
