--- a/src/app/post-page/post-page.component.html
+++ b/src/app/post-page/post-page.component.html
@@ -1,1 +1,19 @@
-<p>post-page works!</p>
+<div class="post">
+  <div class="header">
+    <h1>Post title</h1>
+    <button routerLink="/" class="btn btn-link">На главную</button>
+  </div>
+
+  <div class="info">
+    <strong>Тут автор</strong>
+    <small>12.09.2012</small>
+  </div>
+
+  <div>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus aliquam commodi deleniti eius enim eos error fugit impedit ipsa labore natus necessitatibus nihil non porro quisquam quo repudiandae tempora veniam, vero voluptate. A consequuntur corporis debitis doloribus ducimus eum, ex molestiae odit perspiciatis quam quibusdam quidem sapiente sit tempora vitae?</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus aliquam commodi deleniti eius enim eos error fugit impedit ipsa labore natus necessitatibus nihil non porro quisquam quo repudiandae tempora veniam, vero voluptate. A consequuntur corporis debitis doloribus ducimus eum, ex molestiae odit perspiciatis quam quibusdam quidem sapiente sit tempora vitae?</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus aliquam commodi deleniti eius enim eos error fugit impedit ipsa labore natus necessitatibus nihil non porro quisquam quo repudiandae tempora veniam, vero voluptate. A consequuntur corporis debitis doloribus ducimus eum, ex molestiae odit perspiciatis quam quibusdam quidem sapiente sit tempora vitae?</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus aliquam commodi deleniti eius enim eos error fugit impedit ipsa labore natus necessitatibus nihil non porro quisquam quo repudiandae tempora veniam, vero voluptate. A consequuntur corporis debitis doloribus ducimus eum, ex molestiae odit perspiciatis quam quibusdam quidem sapiente sit tempora vitae?</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus aliquam commodi deleniti eius enim eos error fugit impedit ipsa labore natus necessitatibus nihil non porro quisquam quo repudiandae tempora veniam, vero voluptate. A consequuntur corporis debitis doloribus ducimus eum, ex molestiae odit perspiciatis quam quibusdam quidem sapiente sit tempora vitae?</p>
+  </div>
+</div>
